deploy/data-storage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernaut
  labels:
    name: kubernaut
    component: core
